// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getImageAndText returns correct image and text for afforestationteforestation 1`] = `
<div>
  <img
    alt="afforestationteforestation"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for agricultureforestryandotherlanduse 1`] = `
<div>
  <img
    alt="agricultureforestryandotherlanduse"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for avoidedconversion 1`] = `
<div>
  <img
    alt="avoidedconversion"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for changeoffuelorrawmaterials 1`] = `
<div>
  <img
    alt="changeoffuelorrawmaterials"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for default 1`] = `
<div>
  <img
    alt="default"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for electricitygenerationfromsolarpv 1`] = `
<div>
  <img
    alt="electricitygenerationfromsolarpv"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for energydemand 1`] = `
<div>
  <img
    alt="energydemand"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for energyefficiencyimprovement 1`] = `
<div>
  <img
    alt="energyefficiencyimprovement"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for energygeneration 1`] = `
<div>
  <img
    alt="energygeneration"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for energyindustriesrenewable 1`] = `
<div>
  <img
    alt="energyindustriesrenewable"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for ghgmanagement 1`] = `
<div>
  <img
    alt="ghgmanagement"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for hydropower 1`] = `
<div>
  <img
    alt="hydropower"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for improvedforestmanagement 1`] = `
<div>
  <img
    alt="improvedforestmanagement"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for landfillgascapturecombustion 1`] = `
<div>
  <img
    alt="landfillgascapturecombustion"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for reddreducedemissionsfromdeforestationanddegradation 1`] = `
<div>
  <img
    alt="reddreducedemissionsfromdeforestationanddegradation"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for reducedemissionsfromdeforestationdegradation 1`] = `
<div>
  <img
    alt="reducedemissionsfromdeforestationdegradation"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for reforestation 1`] = `
<div>
  <img
    alt="reforestation"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for reforestationandrevegetation 1`] = `
<div>
  <img
    alt="reforestationandrevegetation"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for renewableelectricityfromwind 1`] = `
<div>
  <img
    alt="renewableelectricityfromwind"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for solarelectricitysystems 1`] = `
<div>
  <img
    alt="solarelectricitysystems"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for solarpower 1`] = `
<div>
  <img
    alt="solarpower"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;

exports[`getImageAndText returns correct image and text for windpower 1`] = `
<div>
  <img
    alt="windpower"
    class="chakra-image css-19vnwa0"
    src="/img.jpg"
  />
</div>
`;
